App rewrite - Deleted everything - New Logger concept - New UI concept